# Takuzu

./: .clang-format  CMakeLists.txt  LICENSE  README.md  game.c  game.h  game_aux.c  game_ext.c  game_ext.h  game_private.c  game_private.h  game_sdl.c  game_sdl.h  game_solve.c  game_struct.h  game_test_epalospinto.c  game_test_jzebian.c  game_test_leoroyer.c  game_text.c  game_tools.c  game_tools.h  main.c  model.c
web/: demo.html  main.css  main.html  main.js  options.css  options.html  options.js
